--- a/tsconfig.eslint.json
+++ b/tsconfig.eslint.json
@@ -2,11 +2,7 @@
 // https://github.com/typescript-eslint/typescript-eslint/blob/master/packages/parser/README.md#configuration
 
 {
-    // extend your base config so you don't have to redefine your compilerOptions
-      "extends": "./tsconfig.json",
-        "include": [
-              "src/**/*.ts",
-                  "test/**/*.ts",
-                      "./webpack.config.js"
-                        ]
+  // extend your base config so you don't have to redefine your compilerOptions
+  "extends": "./tsconfig.json",
+  "include": ["src/**/*.ts", "test/**/*.ts"]
 }
