--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "./build/index.js",
   "scripts": {
     "start": "node build/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "nyc mocha",
     "lint": "eslint . --ext .ts --fix",
     "build": "tsc --project .",
     "buildWatch": "tsc --watch --project ."
@@ -28,10 +28,13 @@
     "typescript": "^3.7.5"
   },
   "devDependencies": {
+    "@types/chai": "^4.2.9",
     "@types/express": "^4.17.2",
+    "@types/mocha": "^7.0.1",
     "@types/node": "^13.7.0",
     "@typescript-eslint/eslint-plugin": "^2.19.0",
     "@typescript-eslint/parser": "^2.19.2",
+    "chai": "^4.2.0",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-config-airbnb-typescript": "^7.0.0",
@@ -39,7 +42,21 @@
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-prettier": "^3.1.2",
-    "prettier": "^1.19.1"
+    "mocha": "^7.0.1",
+    "nyc": "^15.0.0",
+    "prettier": "^1.19.1",
+    "ts-node": "^8.6.2"
   },
-  "description": ""
+  "description": "",
+  "nyc": {
+    "extension": [
+      ".ts",
+      ".tsx"
+    ],
+    "include": [
+      "src/**/*.ts"
+    ],
+    "all": true,
+    "check-leaks": true
+  }
 }
