feat: private API skeleton (#6)
* feat: private API skeleton

fix: thenify server.listen() calls

refactor: move privateAPI out of class into router

refactor: simplify, remove typing requests for now

refactor: simplify User class

feat: public API routing

refactor: remove userMethods from config

refactor: put versioning in enum

* refactor: capitalize api import

* refactor: routing

* fix: test paths

* change test command in circle

* add tests

* refactor: put tests in test folder

* refactor: enum versioning

* fix: typo

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/xpring-eng/identity-system#readme",
   "dependencies": {
     "@types/debug": "^4.1.5",
+    "body-parser": "^1.19.0",
     "debug": "^4.1.1",
     "express": "^4.17.1",
     "reduct": "^3.3.1",
