--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "identity-system",
   "version": "1.0.0",
-  "main": "./build/index.js",
+  "main": "./build/src/index.js",
   "scripts": {
-    "start": "node build/index.js",
+    "start": "node build/src/index.js",
     "test": "nyc mocha",
     "lint": "eslint . --ext .ts --fix",
     "build": "tsc --project .",
@@ -21,15 +21,15 @@
   },
   "homepage": "https://github.com/xpring-eng/identity-system#readme",
   "dependencies": {
-    "@types/debug": "^4.1.5",
     "body-parser": "^1.19.0",
     "debug": "^4.1.1",
     "express": "^4.17.1",
     "reduct": "^3.3.1",
-    "typescript": "^3.8.2"
+    "typescript": "^3.8.3"
   },
   "devDependencies": {
     "@types/chai": "^4.2.10",
+    "@types/debug": "^4.1.5",
     "@types/express": "^4.17.2",
     "@types/mocha": "^7.0.1",
     "@types/node": "^13.7.6",
