--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
   "dependencies": {
     "debug": "^4.1.1",
     "express": "^4.17.1",
+    "knex": "^0.20.10",
+    "pg": "^7.18.2",
     "reduct": "^3.3.1",
     "typescript": "^3.8.3"
   },
@@ -32,8 +34,9 @@
     "@types/express": "^4.17.2",
     "@types/mocha": "^7.0.1",
     "@types/node": "^13.7.6",
-    "@typescript-eslint/parser": "^2.21.0",
+    "@types/pg": "^7.14.1",
     "@typescript-eslint/eslint-plugin": "^2.22.0",
+    "@typescript-eslint/parser": "^2.21.0",
     "chai": "^4.2.0",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.0.0",
