Execute SQL script (#37)
* Add script to execute SQL
* Add copy script

We need to be able to execute the DDL schema against the database, ideally without someone connecting to the production database from their local machine and doing it by hand.

This script automates the running of the schema defined as *.sql files, and runs it on application boot, the same way that Sequelize and other ORMs do.

Since the SQL files will be read alphabetically, I renamed all of them to be prepended with a 2 digit 0# number that indicates the order they should be executed in. This is similar to how knex.js generates filenames with the current timestamp when creating a new migration file.

--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "1.0.0",
   "main": "./build/src/index.js",
   "scripts": {
+    "copySQL": "copyfiles -u 1 **/*.sql build/src",
     "start": "node build/src/index.js",
     "test": "nyc mocha",
     "lint": "eslint . --ext .ts --fix",
-    "build": "tsc --project .",
+    "build": "tsc --project . && npm run copySQL",
     "buildWatch": "tsc --watch --project ."
   },
   "repository": {
@@ -38,6 +39,7 @@
     "@typescript-eslint/eslint-plugin": "^2.22.0",
     "@typescript-eslint/parser": "^2.21.0",
     "chai": "^4.2.0",
+    "copyfiles": "^2.2.0",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-config-airbnb-typescript": "^7.0.0",
