--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@types/mocha": "^7.0.2",
     "@types/node": "^13.9.0",
     "@types/pg": "^7.14.1",
+    "@types/supertest": "^2.0.8",
     "@typescript-eslint/eslint-plugin": "^2.22.0",
     "@typescript-eslint/parser": "^2.22.0",
     "chai": "^4.2.0",
@@ -46,10 +47,12 @@
     "eslint-config-import": "^0.13.0",
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-mocha": "^6.3.0",
     "eslint-plugin-prettier": "^3.1.2",
     "mocha": "^7.1.0",
     "nyc": "^15.0.0",
     "prettier": "^1.19.1",
+    "supertest": "^4.0.2",
     "ts-node": "^8.6.2"
   },
   "description": "",
