--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/xpring-eng/identity-system#readme",
   "dependencies": {
+    "boom": "^7.3.0",
     "debug": "^4.1.1",
     "express": "^4.17.1",
     "knex": "^0.20.11",
@@ -30,6 +31,7 @@
     "typescript": "^3.8.3"
   },
   "devDependencies": {
+    "@types/boom": "^7.3.0",
     "@types/chai": "^4.2.10",
     "@types/debug": "^4.1.5",
     "@types/express": "^4.17.3",
