--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "node build/src/index.js",
     "test": "nyc mocha 'test/**/*.test.ts'",
     "lint": "eslint . --ext .ts --fix",
+    "lint:watch": "chokidar src/**/*.ts -c \"npm run lint\" --initial --verbose",
     "build": "tsc --project . && npm run copySQL",
     "buildWatch": "tsc --watch --project ."
   },
@@ -40,6 +41,8 @@
     "@typescript-eslint/eslint-plugin": "^2.23.0",
     "@typescript-eslint/parser": "^2.23.0",
     "chai": "^4.2.0",
+    "chokidar": "^3.3.1",
+    "chokidar-cli": "^2.1.0",
     "copyfiles": "^2.2.0",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.0.0",
