Clean up seed script (#70)
- rm -rf the build/db directory when you run npm run build
- Clean up and rename the seed script
- Update UUID for a test based on seed script changes

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "nyc mocha 'test/**/*.test.ts'",
     "lint": "eslint . --ext .ts --fix",
     "lint:watch": "chokidar src/**/*.ts -c \"npm run lint\" --initial --verbose",
-    "build": "tsc --project . && npm run copySQL",
+    "build": "rm -rf build/db && tsc --project . && npm run copySQL",
     "buildWatch": "tsc --watch --project ."
   },
   "repository": {
