e2e test the public GET API (#71)
- Add new launch.json configuration to allow VSCode Node debug breakpoints to be triggered when you run a single Mocha test file or run all tests. Super helpful for debugging why a test you thought should work is not.
- Add two new "golden path" tests for the public GET API. Kind of hacky in that it uses a "payment pointer" of 127.0.0.1, but if this works on CI, I'm all for it.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,6 +12,38 @@
       "program": "${workspaceFolder}/build/src/index.js",
       "preLaunchTask": "tsc: build - tsconfig.json",
       "outFiles": ["${workspaceFolder}/build/**/*.js"]
+    },
+    {
+      "type": "node",
+      "request": "launch",
+      "name": "Mocha All",
+      "program": "${workspaceFolder}/node_modules/mocha/bin/_mocha",
+      "args": [
+        "--timeout",
+        "999999",
+        "--colors",
+        "--config",
+        "${workspaceFolder}/.mocharc.js",
+        "${workspaceFolder}/test/**/*.test.ts"
+      ],
+      "console": "integratedTerminal",
+      "internalConsoleOptions": "neverOpen"
+    },
+    {
+      "type": "node",
+      "request": "launch",
+      "name": "Mocha Current File",
+      "program": "${workspaceFolder}/node_modules/mocha/bin/_mocha",
+      "args": [
+        "--timeout",
+        "999999",
+        "--colors",
+        "--config",
+        "${workspaceFolder}/.mocharc.js",
+        "${file}"
+      ],
+      "console": "integratedTerminal",
+      "internalConsoleOptions": "neverOpen"
     }
   ]
 }
