cold postgres backups, ngrok-enabled demo

--- a/demo/Dockerfile
+++ b/demo/Dockerfile
@@ -2,10 +2,18 @@ FROM postgres:12-alpine
 
 ADD . / payid/
 
-RUN apk add npm
+RUN apk add npm git make go
 RUN (cd payid/; npm cache clean --force;)
 RUN (cd payid/; npm install;)
 RUN (cd payid/; npm run build;)
+
+RUN git clone https://github.com/inconshreveable/ngrok.git; \
+    cd ngrok; \
+    make client; \
+    cp bin/ngrok /usr/local/bin/ngrok; \
+    chmod +x /usr/local/bin/ngrok; \
+    echo -e "server_addr: ng.xpring.dev:4443\ntrust_host_root_certs: true" > /etc/ngrok.conf; \
+    chmod 444 /etc/ngrok.conf
 
 USER postgres
 
@@ -23,4 +31,6 @@ CMD ["sh", "-c", "rm -f /var/lib/postgresql/data; \
                   sleep 5; \
                   PGPASSWORD=demo; \
                   createdb -U demo demo; \
-                  node payid/build/src/index.js"]
+                  node payid/build/src/index.js & \
+                  sleep 5; \
+                  ngrok -subdomain=$NGROK_SUBDOMAIN -log=stdout -config=/etc/ngrok.conf 8080"]
