--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "boom": "^7.3.0",
     "express": "^4.17.1",
     "knex": "^0.20.13",
+    "log4js": "^6.1.2",
     "pg": "^8.0.0",
     "typescript": "^3.8.3"
   },
