--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "scripts": {
     "copySQL": "copyfiles -u 1 **/*.sql build/src",
     "start": "node build/src/index.js",
+    "startWatch": "tsc-watch --onSuccess 'npm run start'",
     "test": "nyc mocha 'test/**/*.test.ts'",
     "testWatch": "nyc mocha --watch 'test/**/*.test.ts'",
     "lint": "eslint . --ext .ts --fix",
-    "lint:watch": "chokidar src/**/*.ts -c \"npm run lint\" --initial --verbose",
+    "lintWatch": "chokidar src/**/*.ts -c \"npm run lint\" --initial --verbose",
     "build": "rm -rf build && tsc --project . && npm run copySQL",
     "buildWatch": "tsc --watch --project ."
   },
@@ -57,7 +58,8 @@
     "nyc": "^15.0.1",
     "prettier": "^2.0.4",
     "supertest": "^4.0.2",
-    "ts-node": "^8.8.2"
+    "ts-node": "^8.8.2",
+    "tsc-watch": "^4.2.3"
   },
   "description": "",
   "nyc": {
