fix(CI): CI uses lintNoFix (#234)
* Add failing tests for BTC and ACH in public API

* fix: lint breaking CI - repeated tests

* fix: CI uses lintNoFix

Co-authored-by: Hans Bergren <hansbergren@gmail.com>

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "startWatch": "tsc-watch --onSuccess 'npm run start'",
     "test": "nyc mocha 'test/**/*.test.ts'",
     "testWatch": "nyc mocha --watch 'test/**/*.test.ts'",
+    "lintNoFix": "eslint . --ext .ts",
     "lint": "eslint . --ext .ts --fix",
     "lintWatch": "chokidar src/**/*.ts -c \"npm run lint\" --initial --verbose",
     "build": "rm -rf build && tsc --project . && npm run copySQL",
