Basic Welcome Page (#253)
* Render basic welcome page

* cleaner implementation

* Update src/html/index.html

Co-authored-by: theotherian <ian.g.simpson@gmail.com>

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "./build/src/index.js",
   "scripts": {
     "copySQL": "copyfiles -u 1 **/*.sql build/src",
+    "copyHTML": "copyfiles -u 1 src/html/index.html build/src",
     "start": "node build/src/index.js",
     "startWatch": "tsc-watch --onSuccess 'npm run start'",
     "test": "nyc mocha 'test/**/*.test.ts'",
@@ -11,7 +12,7 @@
     "lintNoFix": "eslint . --ext .ts",
     "lint": "eslint . --ext .ts --fix",
     "lintWatch": "chokidar src/**/*.ts -c \"npm run lint\" --initial --verbose",
-    "build": "rm -rf build && tsc --project . && npm run copySQL",
+    "build": "rm -rf build && tsc --project . && npm run copySQL && npm run copyHTML",
     "buildWatch": "tsc --watch --project ."
   },
   "repository": {
