--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "knex": "^0.21.0",
     "log4js": "^6.2.1",
     "pg": "^8.0.3",
+    "prom-client": "^12.0.0",
     "typescript": "^3.8.3"
   },
   "devDependencies": {
