--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   "devDependencies": {
     "@types/boom": "^7.3.0",
     "@types/chai": "^4.2.11",
+    "@types/chai-as-promised": "^7.1.2",
     "@types/express": "^4.17.6",
     "@types/mocha": "^7.0.2",
     "@types/node": "^13.13.4",
@@ -46,6 +47,7 @@
     "@typescript-eslint/parser": "^2.31.0",
     "@typescript-eslint/eslint-plugin": "^2.31.0",
     "chai": "^4.2.0",
+    "chai-as-promised": "^7.1.1",
     "chokidar": "^3.4.0",
     "chokidar-cli": "^2.1.0",
     "copyfiles": "^2.2.0",
