--- a/package.json
+++ b/package.json
@@ -44,21 +44,19 @@
     "@types/node": "^13.13.5",
     "@types/pg": "^7.14.3",
     "@types/supertest": "^2.0.9",
-    "@typescript-eslint/parser": "^2.31.0",
     "@typescript-eslint/eslint-plugin": "^2.31.0",
+    "@typescript-eslint/parser": "^2.31.0",
+    "@xpring-eng/eslint-config-base": "^0.1.1",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "chokidar": "^3.4.0",
     "chokidar-cli": "^2.1.0",
     "copyfiles": "^2.2.0",
     "eslint": "^6.8.0",
-    "eslint-config-airbnb-base": "^14.1.0",
-    "eslint-config-airbnb-typescript": "^7.2.1",
-    "eslint-config-import": "^0.13.0",
-    "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-mocha": "^6.3.0",
     "eslint-plugin-prettier": "^3.1.3",
+    "eslint-plugin-tsdoc": "^0.2.4",
     "mocha": "^7.1.2",
     "nyc": "^15.0.1",
     "prettier": "^2.0.5",
