Breaking private api [2/X] (#382)
This adds the knex-stringcase library to automatically convert between camelCase in JS/TS land and snake_case in DB-land.

This means that we can only work with camelCase stuff in TypeScript while still using the conventional snake_case names in our database.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,14 @@
     "target": "es2017",
     "module": "commonjs",
     "moduleResolution": "node",
+    // Add custom typings
+    "baseUrl": "./",
+    "paths": {
+      "*": ["@types/*"]
+    },
+
     "downlevelIteration": true,
+
     // Source Map Stuff
     "declaration": true,
     "declarationMap": true,
