--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "boom": "^7.3.0",
     "express": "^4.17.1",
     "knex": "^0.21.1",
+    "knex-stringcase": "^1.4.1",
     "log4js": "^6.2.1",
     "pg": "8.2.1",
     "prom-client": "^12.0.0",
