--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "@types/supertest": "^2.0.9",
     "@typescript-eslint/eslint-plugin": "^3.0.2",
     "@typescript-eslint/parser": "^3.0.2",
-    "@xpring-eng/eslint-config-base": "^0.3.1",
+    "@xpring-eng/eslint-config-base": "^0.4.0",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "chokidar": "^3.4.0",
@@ -56,6 +56,7 @@
     "eslint": "^7.1.0",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-mocha": "^7.0.0",
+    "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-tsdoc": "^0.2.5",
     "mocha": "^7.2.0",
