--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "PayID",
+  "name": "payid",
   "version": "1.0.0",
   "main": "./build/src/index.js",
   "scripts": {
@@ -34,6 +34,7 @@
     "log4js": "^6.3.0",
     "pg": "8.2.1",
     "prom-client": "^12.0.0",
+    "semver": "^7.3.2",
     "typescript": "^3.9.3"
   },
   "devDependencies": {
@@ -44,6 +45,7 @@
     "@types/mocha": "^7.0.2",
     "@types/node": "^14.0.5",
     "@types/pg": "^7.14.3",
+    "@types/semver": "^7.2.0",
     "@types/supertest": "^2.0.9",
     "@typescript-eslint/eslint-plugin": "^3.0.2",
     "@typescript-eslint/parser": "^3.0.2",
