--- a/package.json
+++ b/package.json
@@ -49,13 +49,14 @@
     "@types/supertest": "^2.0.9",
     "@typescript-eslint/eslint-plugin": "^3.0.2",
     "@typescript-eslint/parser": "^3.0.2",
-    "@xpring-eng/eslint-config-base": "^0.4.0",
+    "@xpring-eng/eslint-config-base": "^0.5.1",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "chokidar": "^3.4.0",
     "chokidar-cli": "^2.1.0",
     "copyfiles": "^2.3.0",
     "eslint": "^7.1.0",
+    "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-mocha": "^7.0.0",
     "eslint-plugin-node": "^11.1.0",
