Add a CONTRIBUTING.md file (#455)
This adds a CONTRIBUTING.md file to the PayID repo that talks about:

- Our Code of Conduct
- How to report issues
- How to write a decent PR
- How the various versions of things in the repo work
 -How to set yourself up for local development.

Unrelated: I added a prestart script to automatically run npm run build before you run npm run start, because I didn't want to have to explain that you needed to build before booting up the application.

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "lint": "eslint . --ext .ts --fix",
     "lintNoFix": "eslint . --ext .ts",
     "lintWatch": "chokidar src/**/*.ts -c \"npm run lint\" --initial --verbose",
+    "prestart": "npm run build",
     "start": "node build/src/index.js",
     "startWatch": "tsc-watch --onSuccess 'npm run start'",
     "test": "nyc mocha 'test/**/*.test.ts'",
