feat: auto dev env deploy using docker compose (#465)
Add a Docker Compose file that is used to automatically:

- create a DEV environment (DB + PayID)
- destroy the DEV environment (DB + PayID)
- create a DEV Postgres database only

--- a/package.json
+++ b/package.json
@@ -26,7 +26,10 @@
     "start": "node build/src/index.js",
     "startWatch": "tsc-watch --onSuccess 'npm run start'",
     "test": "nyc mocha 'test/**/*.test.ts'",
-    "testWatch": "nyc mocha --watch 'test/**/*.test.ts'"
+    "testWatch": "nyc mocha --watch 'test/**/*.test.ts'",
+    "devEnvUp": "docker-compose up -d",
+    "devDbUp": "docker-compose up -d db",
+    "devDown": "docker-compose down"
   },
   "dependencies": {
     "boom": "^7.3.0",
