Format markdown and JSON automatically (#484)
Adds prettier *.{md,json} commands to our npm run lint* scripts.

Now if you run:

npm run lint - Markdown and JSON files will automatically be formatted
npm run lintNoFix - You'll get an error if a Markdown or JSON file is incorrectly formatted.

Since we use lintNoFix on CI, this should mean that incorrectly formatted markdown is now a CI failure.

--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "buildWatch": "tsc --watch --project .",
     "copyHTML": "copyfiles -u 1 src/html/* build/src",
     "copySQL": "copyfiles -u 1 **/*.sql build/src",
-    "lint": "eslint . --ext .ts --fix",
-    "lintNoFix": "eslint . --ext .ts",
+    "lint": "eslint . --ext .ts --fix && prettier --write '**/*.{md,json}'",
+    "lintNoFix": "eslint . --ext .ts && prettier --check '**/*.{md,json}'",
     "lintWatch": "chokidar src/**/*.ts -c \"npm run lint\" --initial --verbose",
     "prestart": "npm run build",
     "start": "node build/src/index.js",
