Add `max-warnings = 0` for ESLint (#500)
I've noticed that we've sometimes committed / pushed code that has linting violations because they are marked as warnings and not errors.

This adds --max-warnings 0 to the times where we run npm run lint so that this won't happen moving forward.

--- a/lefthook.yml
+++ b/lefthook.yml
@@ -21,5 +21,5 @@ pre-commit:
   parallel: true
   commands:
     eslint:
-      glob: '*.{js,ts}'
+      glob: '*.ts'
       run: npx eslint {staged_files}
