Add a Apache 2.0 license (#502)

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "type": "git",
     "url": "git+https://github.com/xpring-eng/payid.git"
   },
-  "license": "ISC",
+  "license": "Apache-2.0",
   "author": "",
   "main": "./build/src/index.js",
   "scripts": {
