--- a/package.json
+++ b/package.json
@@ -76,6 +76,8 @@
     "tsc-watch": "^4.2.8"
   },
   "engines": {
-    "node": ">=12.0.0"
+    "node": ">=12.0.0",
+    "npm": ">=6",
+    "yarn": "please use npm"
   }
 }
