--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   },
   "dependencies": {
     "@hapi/boom": "^9.1.0",
+    "@xpring-eng/http-status": "^1.0.0",
     "express": "^4.17.1",
     "knex": "^0.21.1",
     "knex-stringcase": "^1.4.1",
