chore: script to compare versions

--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "testWatch": "nyc mocha --watch 'test/**/*.test.ts'",
     "devEnvUp": "docker-compose up -d",
     "devDbUp": "docker-compose up -d db",
-    "devDown": "docker-compose down"
+    "devDown": "docker-compose down",
+    "compareVersions": "./version.sh $npm_package_version"
   },
   "dependencies": {
     "@hapi/boom": "^9.1.0",
