--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
       "type": "node",
       "request": "launch",
       "name": "Launch PayID Server",
-      "skipFiles": ["<node_internals>/**"],
+      "skipFiles": ["<node_internals>/**", "node_modules/**/*.js"],
       "program": "${workspaceFolder}/build/src/index.js",
       "preLaunchTask": "tsc: build - tsconfig.json",
       "outFiles": ["${workspaceFolder}/build/**/*.js"]
@@ -18,6 +18,7 @@
       "request": "launch",
       "name": "Mocha All",
       "program": "${workspaceFolder}/node_modules/mocha/bin/_mocha",
+      "skipFiles": ["<node_internals>/**", "node_modules/**/*.js"],
       "args": [
         "--timeout",
         "999999",
@@ -34,6 +35,7 @@
       "request": "launch",
       "name": "Mocha Current File",
       "program": "${workspaceFolder}/node_modules/mocha/bin/_mocha",
+      "skipFiles": ["<node_internals>/**", "node_modules/**/*.js"],
       "args": [
         "--timeout",
         "999999",
