--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "devEnvUp": "docker-compose up -d",
     "devDbUp": "docker-compose up -d db",
     "devDown": "docker-compose down",
-    "compareVersions": ". ./scripts/version.sh && compare_versions $npm_package_version"
+    "compareVersions": ". ./scripts/version.sh && compare_versions $npm_package_version",
+    "bump": ". ./scripts/version.sh && bump $npm_package_version"
   },
   "dependencies": {
     "@hapi/boom": "^9.1.0",
