--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "devDbUp": "docker-compose up -d db",
     "devDown": "docker-compose down",
     "compareVersions": ". ./scripts/version.sh && compare_versions $npm_package_version",
-    "bump": ". ./scripts/version.sh && bump $npm_package_version"
+    "bump": ". ./scripts/version.sh && bump $npm_package_version",
+    "release": "hub release create -d -m $npm_package_version $npm_package_version"
   },
   "dependencies": {
     "@hapi/boom": "^9.1.0",
