Custom PostgreSql port via DB_PORT environment variable (#538)
Add a custom PostgreSql port via DB_PORT environment variable, because some database providers allocate different port per client.

Also, use DB_PORT local environment variable in docker-compose.yml, so that the `npm run dev*Up` commands still work properly.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,7 +40,7 @@ services:
     image: postgres:12-alpine
     # external_port:internal_port
     ports:
-      - '5432:5432'
+      - '${DB_PORT:-5432}:5432'
     environment:
       # POSTGRES_PASSWORD is mandatory. If POSTGRES_PASSWORD != password, update DB_PASSWORD in the payid service
       - POSTGRES_PASSWORD=password
