--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "prestart": "npm run build",
     "start": "node build/src/index.js",
     "startWatch": "tsc-watch --onSuccess 'npm run start'",
-    "test": "nyc mocha 'test/**/*.test.ts' --exit",
+    "test": "nyc mocha 'test/**/*.test.ts'",
     "testWatch": "nyc mocha --watch 'test/**/*.test.ts'",
     "devEnvUp": "docker-compose up -d",
     "devDbUp": "docker-compose up -d db",
