--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   },
   "devDependencies": {
     "@arkweid/lefthook": "^0.7.2",
+    "@fintechstudios/eslint-plugin-chai-as-promised": "^3.0.2",
     "@types/chai": "^4.2.11",
     "@types/chai-as-promised": "^7.1.2",
     "@types/express": "^4.17.6",
@@ -55,13 +56,14 @@
     "@types/supertest": "^2.0.9",
     "@typescript-eslint/eslint-plugin": "^3.4.0",
     "@typescript-eslint/parser": "^3.4.0",
-    "@xpring-eng/eslint-config-base": "^0.7.2",
+    "@xpring-eng/eslint-config-base": "^0.9.0",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "chokidar": "^3.4.0",
     "chokidar-cli": "^2.1.0",
     "copyfiles": "^2.3.0",
     "eslint": "^7.3.1",
+    "eslint-plugin-array-func": "^3.1.6",
     "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-jsdoc": "^28.5.1",
