--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,6 +30,6 @@
     "noUnusedParameters": true,
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
-    "forceConsistentCasingInFileNames": false
+    "forceConsistentCasingInFileNames": true
   }
 }
