--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,7 +18,7 @@ lint:
   image:
     name: node:12
   before_script:
-    - npm cache clean .npm
+    - rm -rf .npm
     - npm i --cache .npm --prefer-offline --no-audit --progress=false
   script:
     - npm run lintNoFix
@@ -28,7 +28,7 @@ code coverage:
   image:
     name: node:12
   before_script:
-    - npm cache clean .npm
+    - rm -rf .npm
     - npm i --cache .npm --no-audit --progress=false --prefer-offline -g nyc codecov
     - npm i --cache .npm --no-audit --progress=false --prefer-offline
   script:
