--- a/lefthook.yml
+++ b/lefthook.yml
@@ -4,9 +4,10 @@
 pre-push:
   parallel: true
   commands:
-    packages-audit:
-      tags: security
-      run: npm audit
+    # Disable audits
+    # packages-audit:
+    #   tags: security
+    #   run: npm audit
     eslint:
       tags: style
       run: npm run lintNoFix
@@ -21,5 +22,5 @@ pre-commit:
   parallel: true
   commands:
     eslint:
-      glob: '*.ts'
+      glob: "*.ts"
       run: npx eslint {staged_files}
