--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,10 @@
 version: '3'
 services:
-  payid-server:
+  payid_server:
     # Defines the container name when using "docker-compose up". Warning: does not work with "docker-compose run" (Docker issue)
     container_name: 'payid-server'
     # Defines the image name and tag.
-    image: payid-server:1.0.0
+    image: payid-server:1.0.1
     # As we define the build context, the image is not pulled from Dockerhub. It is built locally based on our Dockerfile.
     build:
       context: .
