--- a/package.json
+++ b/package.json
@@ -30,8 +30,8 @@
     "devEnvUp": "PAYID_SERVER_IMAGE_TAG=$npm_package_version docker-compose up -d",
     "devDbUp": "PAYID_SERVER_IMAGE_TAG=$npm_package_version docker-compose up -d db",
     "devDown": "PAYID_SERVER_IMAGE_TAG=$npm_package_version docker-compose down",
-    "compareVersions": ". ./scripts/version.sh && compare_versions $npm_package_version",
-    "bump": ". ./scripts/version.sh && bump $npm_package_version"
+    "compareVersions": "source ./scripts/version.sh && compare_versions $npm_package_version",
+    "bump": "source ./scripts/version.sh && bump $npm_package_version"
   },
   "dependencies": {
     "@hapi/boom": "^9.1.0",
