--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "devEnvUp": "PAYID_SERVER_IMAGE_TAG=$npm_package_version docker-compose up -d",
     "devDbUp": "PAYID_SERVER_IMAGE_TAG=$npm_package_version docker-compose up -d db",
     "devDown": "PAYID_SERVER_IMAGE_TAG=$npm_package_version docker-compose down",
-    "compareVersions": ". ./scripts/version.sh && compare_versions $npm_package_version",
+    "compareVersions": "sh -c '. ./scripts/version.sh && compare_versions $npm_package_version'",
     "bump": ". ./scripts/version.sh && bump $npm_package_version"
   },
   "dependencies": {
