--- a/package.json
+++ b/package.json
@@ -27,9 +27,9 @@
     "startWatch": "tsc-watch --onSuccess 'npm run start'",
     "test": "nyc mocha 'test/**/*.test.ts'",
     "testWatch": "nyc mocha --watch 'test/**/*.test.ts'",
-    "devEnvUp": "PAYID_SERVER_IMAGE_TAG=$npm_package_version docker-compose up -d",
-    "devDbUp": "PAYID_SERVER_IMAGE_TAG=$npm_package_version docker-compose up -d db",
-    "devDown": "PAYID_SERVER_IMAGE_TAG=$npm_package_version docker-compose down",
+    "devEnvUp": "PAYID_DOCKER_IMAGE_VERSION=$npm_package_version docker-compose up -d",
+    "devDbUp": "PAYID_DOCKER_IMAGE_VERSION=$npm_package_version docker-compose up -d db",
+    "devDown": "PAYID_DOCKER_IMAGE_VERSION=$npm_package_version docker-compose down",
     "compareVersions": "bash -c '. ./scripts/version.sh && compare_versions $npm_package_version'",
     "bump": "bash -c '. ./scripts/version.sh && bump $npm_package_version'"
   },
