--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "payid",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "description": "The PayID Server reference implementation",
   "keywords": [],
   "homepage": "https://github.com/payid-org/payid#readme",
@@ -31,7 +31,7 @@
     "devDbUp": "PAYID_DOCKER_IMAGE_VERSION=$npm_package_version docker-compose up -d db",
     "devDown": "PAYID_DOCKER_IMAGE_VERSION=$npm_package_version docker-compose down",
     "compareVersions": "bash -c '. ./scripts/version.sh && compare_versions $npm_package_version'",
-    "bump": "bash -c '. ./scripts/version.sh && bump $npm_package_version'",
+    "bump": "bash -c '. ./scripts/version.sh && bump $npm_package_version $1' -l ",
     "release": "hub release create -d -m $npm_package_version $npm_package_version"
   },
   "dependencies": {
