--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "compareVersions": "./scripts/version/compare.sh $npm_package_version",
     "bump": "./scripts/version/bump.sh $npm_package_version $1",
     "release": "hub release create -d -m $npm_package_version $npm_package_version",
-    "cut": "git push origin tag $npm_package_version"
+    "cut": "npm run bump $npm_config_bump && git push --follow-tags && npm run release"
   },
   "dependencies": {
     "@hapi/boom": "^9.1.0",
