import json file instead of parsing. typescript ftw

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,6 +30,9 @@
     "noUnusedParameters": true,
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
-    "forceConsistentCasingInFileNames": true
+    "forceConsistentCasingInFileNames": true,
+
+    // Enables loading static JSON modules
+    "resolveJsonModule": true
   }
 }
