--- a/package.json
+++ b/package.json
@@ -45,8 +45,7 @@
     "pg": "8.2.1",
     "prom-client": "^12.0.0",
     "semver": "^7.3.2",
-    "typescript": "^3.9.5",
-    "dotenv": "^8.2.0"
+    "typescript": "^3.9.5"
   },
   "devDependencies": {
     "@arkweid/lefthook": "^0.7.2",
