--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   },
   "dependencies": {
     "@hapi/boom": "^9.1.0",
+    "@payid-org/payid-metrics": "^0.2.0",
     "@xpring-eng/http-status": "^1.0.0",
     "express": "^4.17.1",
     "knex": "^0.21.1",
