--- a/package.json
+++ b/package.json
@@ -37,10 +37,10 @@
   "dependencies": {
     "@hapi/boom": "^9.1.0",
     "@xpring-eng/http-status": "^1.0.0",
+    "@xpring-eng/logger": "^1.0.0",
     "express": "^4.17.1",
     "knex": "^0.21.1",
     "knex-stringcase": "^1.4.1",
-    "log4js": "^6.3.0",
     "pg": "8.2.1",
     "prom-client": "^12.0.0",
     "semver": "^7.3.2",
