--- a/package.json
+++ b/package.json
@@ -15,9 +15,7 @@
   "author": "",
   "main": "./build/src/index.js",
   "scripts": {
-    "build": "run-script-os",
-    "build:default": "rm -rf build && tsc --project . && npm run copySQL && npm run copyHTML && npm run copyJSON",
-    "build:win32": "del /q /f build && tsc --project . && npm run copySQL && npm run copyHTML && npm run copyJSON",
+    "build": "rm -rf build && tsc --project . && npm run copySQL && npm run copyHTML && npm run copyJSON",
     "buildWatch": "tsc --watch --project .",
     "copyHTML": "copyfiles -u 1 src/html/* build/src",
     "copySQL": "copyfiles -u 1 **/*.sql build/src",
@@ -40,12 +38,12 @@
   },
   "dependencies": {
     "@hapi/boom": "^9.1.0",
-    "@payid-org/server-metrics": "^1.0.0",
+    "@payid-org/server-metrics": "github:payid-org/server-metrics#nh/server-and-protocol-version",
     "@xpring-eng/http-status": "^1.0.0",
-    "@xpring-eng/logger": "^1.0.0",
     "express": "^4.17.1",
     "knex": "^0.21.1",
     "knex-stringcase": "^1.4.1",
+    "log4js": "^6.3.0",
     "pg": "8.2.1",
     "prom-client": "^12.0.0",
     "semver": "^7.3.2",
@@ -54,28 +52,27 @@
   "devDependencies": {
     "@arkweid/lefthook": "^0.7.2",
     "@fintechstudios/eslint-plugin-chai-as-promised": "^3.0.2",
-    "@types/chai": "^4.2.12",
+    "@types/chai": "^4.2.11",
     "@types/chai-as-promised": "^7.1.2",
     "@types/express": "^4.17.6",
     "@types/mocha": "^7.0.2",
-    "@types/node": "^14.0.26",
-    "@types/pg": "^7.14.4",
+    "@types/node": "^14.0.19",
+    "@types/pg": "^7.14.3",
     "@types/semver": "^7.3.1",
     "@types/supertest": "^2.0.10",
-    "@typescript-eslint/eslint-plugin": "^3.7.0",
-    "@typescript-eslint/parser": "^3.7.0",
-    "@xpring-eng/eslint-config-base": "^0.11.0",
-    "@xpring-eng/eslint-config-mocha": "^1.0.0",
+    "@typescript-eslint/eslint-plugin": "^3.5.0",
+    "@typescript-eslint/parser": "^3.5.0",
+    "@xpring-eng/eslint-config-base": "^0.9.0",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
-    "chokidar": "^3.4.2",
+    "chokidar": "^3.4.0",
     "chokidar-cli": "^2.1.0",
     "copyfiles": "^2.3.0",
-    "eslint": "^7.5.0",
+    "eslint": "^7.4.0",
     "eslint-plugin-array-func": "^3.1.6",
     "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-import": "^2.22.0",
-    "eslint-plugin-jsdoc": "^30.0.3",
+    "eslint-plugin-jsdoc": "^28.6.1",
     "eslint-plugin-mocha": "^7.0.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^3.1.4",
